adding resume with changes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link js-scroll" href="#work">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="img/resume.pdf">Resume</a>
+            <a class="nav-link js-scroll" href="img/Resume-Sumati Bhala.pdf">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -496,7 +496,7 @@
                     </h5>
                   </div>
                   <div>
-                      <form action="sumatibhala@gmail.com" method="post" role="form" class="contactForm">
+                      <form action="" method="post" role="form" class="contactForm">
                       <div id="sendmessage">Your message has been sent. Thank you!</div>
                       <div id="errormessage"></div>
                       <div class="row">
