--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link js-scroll" href="#work">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="img/Resume-Sumati Bhala.pdf">Resume</a>
+            <a class="nav-link js-scroll" href="img/Resume-Sumati Bhala.docx">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
