--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               <h2 class="s-title">Web Development</h2>
               <p class="s-description text-center">
                 Created this visualisation using HTML and CSS
-                <a href = "https://sbagni.github.io/html_link/"> 
+                <a href = "https://sbagni.github.io/HTML-Page/"> 
                   <p>HTML link</p>
                 </a>
                 </p>
