--- a/index.html
+++ b/index.html
@@ -163,19 +163,19 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Data analyst with a background in Economics and skills in Excel, VBA, Python and SQL from UofT's Data Analytics and Coding Bootcamp. 
-                    Excited to work with data and consistently curious to unfold the hidden patterns in data. Enjoy exploring the various ways to traverse the data and
+                    I am a Data analyst with background in Economics and skills in Excel, VBA, Python and SQL from UofT's Data Analytics and Coding Bootcamp. 
+                    Always excited to work with data and consistently curious to unfold the hidden patterns. I enjoy exploring the various ways to traverse the data and
                     render the findings for equally amazing visualisations. My creative ideas, exceptional problem solving abilities combined with persistence and patience  
                     in collaborating across diverse groups, makes me a valuable addition to any team.
                   </p>
                   <p class="lead">
-                   Recently completed a project on Sentimental Analysis through machine learning (ML) where we worked in a team of four to build model that can 
-                   predict the sentiment of tweet for Greta Thunberg. Along with it can also predict whether the tweet was political or non political. Created a 
+                   We recently completed a project on Sentimental Analysis through machine learning (ML) where we worked in a team of four to build model that can 
+                   predict the sentiment of tweets for Greta Thunberg. Along with it can also predict whether the tweet was political or non political. We created a 
                    visualisation through tableau with the data extracted from twitter API.
                   </p>
                   <p class="lead"> 
-                    Another interesting project was ETL completed in a team of three using data sets from Toronto public library,
-                    Python, SQLAlchemy and SQL relational databases to find changes in  the number of active users, branches, locations and circulation for last 5 years. 
+                    Another interesting project was ETL that we completed with a team of three using data sets from Toronto public library,
+                    Python, SQLAlchemy and SQL relational databases to explore more about the number of active users, branches, locations and circulation during last 5 years. 
                   </p>  
                 </div>
               </div>
@@ -545,10 +545,9 @@
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li>
+                      <li><a href="https://www.linkedin.com/in/sumati-bhala-596550123/"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
+                      <li><a href="https://www.instagram.com/sumatibhala/"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+                      <li><a href="https://github.com/Sbagni"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
